--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <img src="img/pic3.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <p>third slide.</p>
             </div>
           </div>
         </div>
