--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Qsauce</a>
+            <a class="navbar-brand" href="#">
+                <img
+                class="d-inline-block "
+                 src="https://getbootstrap.com/docs/5.1/assets/brand/bootstrap-logo.svg"
+                width="25" height="25">
+                Qsauce</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -42,6 +47,11 @@
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
+
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                  </form>
 
             </div>
         </div>
